// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildImagePrompt > snapshot dla Wielkanoc bez seriesDirection 1`] = `
"Use case: illustration-story
Asset type: monthly coloring calendar tile for children, final project asset saved as YYYY/MM/DD.png
Primary request: create a black-and-white printable coloring-page illustration for 05.04 that represents koszyk (Wielkanoc)
Scene/backdrop: minimal white background or no background, only a few supporting elements if they improve readability
Subject: koszyk
Style/medium: children's coloring page line art, elegant clean outlines, printable, cohesive series style
Composition/framing: one strong central motif, balanced tile, readable at small size on an A4 monthly sheet, with the date integrated into the illustration on a natural shape that belongs to the scene; never below the illustration as a detached caption
Lighting/mood: cheerful, gentle, festive or seasonal as appropriate, never dark or dramatic
Color palette: black outlines only on white background
Materials/textures: smooth clean contours, large simple shapes, very limited interior detail
Text (verbatim): "05.04"
Constraints: child-friendly; black outlines only; no grayscale; no shading; no photorealism; no clutter; no watermark; no frame; no decorative border; no bottom divider; consistent with the rest of the month
Avoid: caption under the drawing, extra underline, ornamental separator, clipart look, stock icon look, tiny ornaments, dense backgrounds, heavy crosshatching, extra text, realistic shadows
"
`;

exports[`buildImagePrompt > snapshot z seriesDirection 1`] = `
"Series constraints: grubość konturu 2px

Use case: illustration-story
Asset type: monthly coloring calendar tile for children, final project asset saved as YYYY/MM/DD.png
Primary request: create a black-and-white printable coloring-page illustration for 01.01 that represents śnieg
Scene/backdrop: minimal white background or no background, only a few supporting elements if they improve readability
Subject: śnieg
Style/medium: children's coloring page line art, elegant clean outlines, printable, cohesive series style
Composition/framing: one strong central motif, balanced tile, readable at small size on an A4 monthly sheet, with the date integrated into the illustration on a natural shape that belongs to the scene; never below the illustration as a detached caption
Lighting/mood: cheerful, gentle, festive or seasonal as appropriate, never dark or dramatic
Color palette: black outlines only on white background
Materials/textures: smooth clean contours, large simple shapes, very limited interior detail
Text (verbatim): "01.01"
Constraints: child-friendly; black outlines only; no grayscale; no shading; no photorealism; no clutter; no watermark; no frame; no decorative border; no bottom divider; consistent with the rest of the month
Avoid: caption under the drawing, extra underline, ornamental separator, clipart look, stock icon look, tiny ornaments, dense backgrounds, heavy crosshatching, extra text, realistic shadows
"
`;
